fonctionnement works without animation

--- a/index.html
+++ b/index.html
@@ -45,6 +45,36 @@
           </div>
         </div>
       </div>
+      <div class="how">
+        <h2 class="how__title">Fonctionnement</h2>
+        <div class="how__blockinfo">
+          <div class="how__blockinfo__choose">
+            <div class="how__blockinfo__choose__blocklogo">
+              <p class="how__blockinfo__choose__number">1</p>
+              <i
+                class="fas fa-mobile-alt how__blockinfo__choose__blocklogo__logo"
+              ></i>
+            </div>
+            <p class="how__blockinfo__choose__text">Choissisez un restaurant</p>
+          </div>
+          <div class="how__blockinfo__compose">
+            <div class="how__blockinfo__compose__blocklogo">
+              <p class="how__blockinfo__compose__number">2</p>
+              <i
+                class="fas fa-list how__blockinfo__compose__blocklogo__logo"
+              ></i>
+            </div>
+            <p class="how__blockinfo__compose__text">Composez votre menu</p>
+          </div>
+          <div class="how__blockinfo__eat">
+            <div class="how__blockinfo__eat__blocklogo">
+              <p class="how__blockinfo__eat__number">3</p>
+              <i class="fas fa-store how__blockinfo__eat__blocklogo__logo"></i>
+            </div>
+            <p class="how__blockinfo__eat__text">Dégustez au restaurant</p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
