--- a/index.html
+++ b/index.html
@@ -75,6 +75,131 @@
           </div>
         </div>
       </div>
+      <div class="restaurants">
+        <h1 class="restaurants__title">Restaurants</h1>
+        <div class="restaurants__blockinfo">
+          <div class="restaurants__blockinfo__restaurant">
+            <img
+              class="restaurants__blockinfo__restaurant__img"
+              src="./public/css/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              alt=""
+            />
+            <div class="restaurants__blockinfo__restaurant__blockdescription">
+              <div
+                class="restaurants__blockinfo__restaurant__blockdescription__description"
+              >
+                <h2
+                  class="restaurants__blockinfo__restaurant__blockdescription__description__title"
+                >
+                  La palette du goût
+                </h2>
+                <p
+                  class="restaurants__blockinfo__restaurant__blockdescription__description__text"
+                >
+                  Ménilmontant
+                </p>
+              </div>
+              <div
+                class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
+              >
+                <i
+                  class="far fa-heart fa-lg restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
+                ></i>
+              </div>
+            </div>
+          </div>
+          <div class="restaurants__blockinfo__restaurant">
+            <img
+              class="restaurants__blockinfo__restaurant__img"
+              src="./public/css/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+              alt=""
+            />
+            <div class="restaurants__blockinfo__restaurant__blockdescription">
+              <div
+                class="restaurants__blockinfo__restaurant__blockdescription__description"
+              >
+                <h2
+                  class="restaurants__blockinfo__restaurant__blockdescription__description__title"
+                >
+                  La note enchantée
+                </h2>
+                <p
+                  class="restaurants__blockinfo__restaurant__blockdescription__description__text"
+                >
+                  Charonne
+                </p>
+              </div>
+              <div
+                class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
+              >
+                <i
+                  class="far fa-heart fa-lg restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
+                ></i>
+              </div>
+            </div>
+          </div>
+          <div class="restaurants__blockinfo__restaurant">
+            <img
+              class="restaurants__blockinfo__restaurant__img"
+              src="./public/css/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+              alt=""
+            />
+            <div class="restaurants__blockinfo__restaurant__blockdescription">
+              <div
+                class="restaurants__blockinfo__restaurant__blockdescription__description"
+              >
+                <h2
+                  class="restaurants__blockinfo__restaurant__blockdescription__description__title"
+                >
+                  À la française
+                </h2>
+                <p
+                  class="restaurants__blockinfo__restaurant__blockdescription__description__text"
+                >
+                  Cité Rouge
+                </p>
+              </div>
+              <div
+                class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
+              >
+                <i
+                  class="far fa-heart fa-lg restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
+                ></i>
+              </div>
+            </div>
+          </div>
+          <div class="restaurants__blockinfo__restaurant">
+            <img
+              class="restaurants__blockinfo__restaurant__img"
+              src="./public/css/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+              alt=""
+            />
+            <div class="restaurants__blockinfo__restaurant__blockdescription">
+              <div
+                class="restaurants__blockinfo__restaurant__blockdescription__description"
+              >
+                <h2
+                  class="restaurants__blockinfo__restaurant__blockdescription__description__title"
+                >
+                  Le délice des sens
+                </h2>
+                <p
+                  class="restaurants__blockinfo__restaurant__blockdescription__description__text"
+                >
+                  Folie-Méricourt
+                </p>
+              </div>
+              <div
+                class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
+              >
+                <i
+                  class="far fa-heart fa-lg restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
+                ></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
