--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <title>OhMyfood</title>
   </head>
   <body>
     <!---------------------------- Header  ---------------------------->
@@ -27,7 +32,7 @@
       />
     </header>
     <!---------------------------- Body  ---------------------------->
-    <main class="container">
+    <main class="">
       <div class="location">
         <div class="location__blockinfo">
           <i class="fas fa-map-marker-alt"></i>
@@ -201,5 +206,26 @@
         </div>
       </div>
     </main>
+    <footer class="footer">
+      <div class="footer__blockinfo">
+        <h2 class="footer__blockinfo__title">ohmyfood</h2>
+        <div>
+          <div class="footer__blockinfo__blocklogo">
+            <i
+              class="fas fa-utensils fa-xs footer__blockinfo__blocklogo__logo"
+            ></i>
+            <p class="footer__blockinfo__text">Proposer un restaurant</p>
+          </div>
+          <div class="footer__blockinfo__blocklogo">
+            <i
+              class="fas fa-hands-helping fa-xs footer__blockinfo__blocklogo__logo"
+            ></i>
+            <p class="footer__blockinfo__text">Devenir partenaire</p>
+          </div>
+          <p class="footer__blockinfo__text">Mentions légales</p>
+          <p class="footer__blockinfo__text">Contact</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
