--- a/index.html
+++ b/index.html
@@ -32,180 +32,220 @@
       />
     </header>
     <!---------------------------- Body  ---------------------------->
+
     <main class="">
-      <div class="location">
-        <div class="location__blockinfo">
-          <i class="fas fa-map-marker-alt"></i>
-          <p class="location__text">Paris, Belleville</p>
-        </div>
-      </div>
-      <div class="explore">
-        <div class="explore__blockinfo">
-          <h1 class="explore__title">Réservez le menu qui vous convient</h1>
-          <h2 class="explore__description">
-            Découvrez des restaurants d'exception, séléectionnés par nos soins.
-          </h2>
-          <div class="explore__button">
-            <h3 class="explore__button__text">Explorer nos restaurants</h3>
+      <div class="display">
+        <p class="spinner"></p>
+        <div class="location">
+          <div class="location__blockinfo">
+            <i class="fas fa-map-marker-alt"></i>
+            <p class="location__text">Paris, Belleville</p>
           </div>
         </div>
-      </div>
-      <div class="how">
-        <h2 class="how__title">Fonctionnement</h2>
-        <div class="how__blockinfo">
-          <div class="how__blockinfo__choose">
-            <div class="how__blockinfo__choose__blocklogo">
-              <p class="how__blockinfo__choose__number">1</p>
-              <i
-                class="fas fa-mobile-alt how__blockinfo__choose__blocklogo__logo"
-              ></i>
+        <div class="explore">
+          <div class="explore__blockinfo">
+            <h1 class="explore__title">Réservez le menu qui vous convient</h1>
+            <h2 class="explore__description">
+              Découvrez des restaurants d'exception, séléectionnés par nos
+              soins.
+            </h2>
+            <div class="explore__button">
+              <a href="">
+                <h3 class="explore__button__text">Explorer nos restaurants</h3>
+              </a>
             </div>
-            <p class="how__blockinfo__choose__text">Choissisez un restaurant</p>
-          </div>
-          <div class="how__blockinfo__compose">
-            <div class="how__blockinfo__compose__blocklogo">
-              <p class="how__blockinfo__compose__number">2</p>
-              <i
-                class="fas fa-list how__blockinfo__compose__blocklogo__logo"
-              ></i>
-            </div>
-            <p class="how__blockinfo__compose__text">Composez votre menu</p>
-          </div>
-          <div class="how__blockinfo__eat">
-            <div class="how__blockinfo__eat__blocklogo">
-              <p class="how__blockinfo__eat__number">3</p>
-              <i class="fas fa-store how__blockinfo__eat__blocklogo__logo"></i>
-            </div>
-            <p class="how__blockinfo__eat__text">Dégustez au restaurant</p>
           </div>
         </div>
-      </div>
-      <div class="restaurants">
-        <h1 class="restaurants__title">Restaurants</h1>
-        <div class="restaurants__blockinfo">
-          <div class="restaurants__blockinfo__restaurant">
-            <img
-              class="restaurants__blockinfo__restaurant__img"
-              src="./public/css/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-              alt=""
-            />
-            <div class="restaurants__blockinfo__restaurant__blockdescription">
-              <div
-                class="restaurants__blockinfo__restaurant__blockdescription__description"
-              >
-                <h2
-                  class="restaurants__blockinfo__restaurant__blockdescription__description__title"
-                >
-                  La palette du goût
-                </h2>
-                <p
-                  class="restaurants__blockinfo__restaurant__blockdescription__description__text"
-                >
-                  Ménilmontant
-                </p>
-              </div>
-              <div
-                class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
-              >
+        <div class="how">
+          <h2 class="how__title">Fonctionnement</h2>
+          <div class="how__blockinfo">
+            <div class="how__blockinfo__choose">
+              <div class="how__blockinfo__choose__blocklogo">
+                <p class="how__blockinfo__choose__number">1</p>
                 <i
-                  class="far fa-heart fa-lg restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
+                  class="fas fa-mobile-alt how__blockinfo__choose__blocklogo__logo"
                 ></i>
               </div>
+              <p class="how__blockinfo__choose__text">
+                Choissisez un restaurant
+              </p>
+            </div>
+            <div class="how__blockinfo__compose">
+              <div class="how__blockinfo__compose__blocklogo">
+                <p class="how__blockinfo__compose__number">2</p>
+                <i
+                  class="fas fa-list how__blockinfo__compose__blocklogo__logo"
+                ></i>
+              </div>
+              <p class="how__blockinfo__compose__text">Composez votre menu</p>
+            </div>
+            <div class="how__blockinfo__eat">
+              <div class="how__blockinfo__eat__blocklogo">
+                <p class="how__blockinfo__eat__number">3</p>
+                <i
+                  class="fas fa-store how__blockinfo__eat__blocklogo__logo"
+                ></i>
+              </div>
+              <p class="how__blockinfo__eat__text">Dégustez au restaurant</p>
             </div>
           </div>
-          <div class="restaurants__blockinfo__restaurant">
-            <img
-              class="restaurants__blockinfo__restaurant__img"
-              src="./public/css/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-              alt=""
-            />
-            <div class="restaurants__blockinfo__restaurant__blockdescription">
-              <div
-                class="restaurants__blockinfo__restaurant__blockdescription__description"
-              >
-                <h2
-                  class="restaurants__blockinfo__restaurant__blockdescription__description__title"
+        </div>
+        <div class="restaurants">
+          <h1 class="restaurants__title">Restaurants</h1>
+          <div class="restaurants__blockinfo">
+            <a href="/restaurant1.html">
+              <div class="restaurants__blockinfo__restaurant">
+                <img
+                  class="restaurants__blockinfo__restaurant__img"
+                  src="./public/css/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  alt="photorestaurant"
+                />
+                <div
+                  class="restaurants__blockinfo__restaurant__blockdescription"
                 >
-                  La note enchantée
-                </h2>
-                <p
-                  class="restaurants__blockinfo__restaurant__blockdescription__description__text"
+                  <div
+                    class="restaurants__blockinfo__restaurant__blockdescription__description"
+                  >
+                    <h2
+                      class="restaurants__blockinfo__restaurant__blockdescription__description__title"
+                    >
+                      La palette du goût
+                    </h2>
+                    <p
+                      class="restaurants__blockinfo__restaurant__blockdescription__description__text"
+                    >
+                      Ménilmontant
+                    </p>
+                  </div>
+                  <div
+                    class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
+                  >
+                    <i
+                      class="far fa-heart fa-2x restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
+                    ></i>
+                    <i
+                      class="fas fa-heart fa-2x restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo2"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="/restaurant2.html">
+              <div class="restaurants__blockinfo__restaurant">
+                <img
+                  class="restaurants__blockinfo__restaurant__img"
+                  src="./public/css/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  alt="photorestaurant"
+                />
+                <div
+                  class="restaurants__blockinfo__restaurant__blockdescription"
                 >
-                  Charonne
-                </p>
+                  <div
+                    class="restaurants__blockinfo__restaurant__blockdescription__description"
+                  >
+                    <h2
+                      class="restaurants__blockinfo__restaurant__blockdescription__description__title"
+                    >
+                      La note enchantée
+                    </h2>
+                    <p
+                      class="restaurants__blockinfo__restaurant__blockdescription__description__text"
+                    >
+                      Charonne
+                    </p>
+                  </div>
+                  <div
+                    class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
+                  >
+                    <i
+                      class="far fa-heart fa-2x restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
+                    ></i>
+                    <i
+                      class="fas fa-heart fa-2x restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo2"
+                    ></i>
+                  </div>
+                </div>
               </div>
-              <div
-                class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
-              >
-                <i
-                  class="far fa-heart fa-lg restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
-                ></i>
-              </div>
-            </div>
-          </div>
-          <div class="restaurants__blockinfo__restaurant">
-            <img
-              class="restaurants__blockinfo__restaurant__img"
-              src="./public/css/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-              alt=""
-            />
-            <div class="restaurants__blockinfo__restaurant__blockdescription">
-              <div
-                class="restaurants__blockinfo__restaurant__blockdescription__description"
-              >
-                <h2
-                  class="restaurants__blockinfo__restaurant__blockdescription__description__title"
+            </a>
+            <a href="/restaurant3.html">
+              <div class="restaurants__blockinfo__restaurant">
+                <img
+                  class="restaurants__blockinfo__restaurant__img"
+                  src="./public/css/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  alt="photorestaurant"
+                />
+                <div
+                  class="restaurants__blockinfo__restaurant__blockdescription"
                 >
-                  À la française
-                </h2>
-                <p
-                  class="restaurants__blockinfo__restaurant__blockdescription__description__text"
+                  <div
+                    class="restaurants__blockinfo__restaurant__blockdescription__description"
+                  >
+                    <h2
+                      class="restaurants__blockinfo__restaurant__blockdescription__description__title"
+                    >
+                      À la française
+                    </h2>
+                    <p
+                      class="restaurants__blockinfo__restaurant__blockdescription__description__text"
+                    >
+                      Cité Rouge
+                    </p>
+                  </div>
+                  <div
+                    class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
+                  >
+                    <i
+                      class="far fa-heart fa-2x restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
+                    ></i>
+                    <i
+                      class="fas fa-heart fa-2x restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo2"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="/restaurant4.html">
+              <div class="restaurants__blockinfo__restaurant">
+                <img
+                  class="restaurants__blockinfo__restaurant__img"
+                  src="./public/css/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  alt="photorestaurant"
+                />
+                <div
+                  class="restaurants__blockinfo__restaurant__blockdescription"
                 >
-                  Cité Rouge
-                </p>
+                  <div
+                    class="restaurants__blockinfo__restaurant__blockdescription__description"
+                  >
+                    <h2
+                      class="restaurants__blockinfo__restaurant__blockdescription__description__title"
+                    >
+                      Le délice des sens
+                    </h2>
+                    <p
+                      class="restaurants__blockinfo__restaurant__blockdescription__description__text"
+                    >
+                      Folie-Méricourt
+                    </p>
+                  </div>
+                  <div
+                    class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
+                  >
+                    <i
+                      class="far fa-heart fa-2x restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
+                    ></i>
+                    <i
+                      class="fas fa-heart fa-2x restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo2"
+                    ></i>
+                  </div>
+                </div>
               </div>
-              <div
-                class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
-              >
-                <i
-                  class="far fa-heart fa-lg restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
-                ></i>
-              </div>
-            </div>
-          </div>
-          <div class="restaurants__blockinfo__restaurant">
-            <img
-              class="restaurants__blockinfo__restaurant__img"
-              src="./public/css/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-              alt=""
-            />
-            <div class="restaurants__blockinfo__restaurant__blockdescription">
-              <div
-                class="restaurants__blockinfo__restaurant__blockdescription__description"
-              >
-                <h2
-                  class="restaurants__blockinfo__restaurant__blockdescription__description__title"
-                >
-                  Le délice des sens
-                </h2>
-                <p
-                  class="restaurants__blockinfo__restaurant__blockdescription__description__text"
-                >
-                  Folie-Méricourt
-                </p>
-              </div>
-              <div
-                class="restaurants__blockinfo__restaurant__blockdescription__blocklogo"
-              >
-                <i
-                  class="far fa-heart fa-lg restaurants__blockinfo__restaurant__blockdescription__blocklogo__logo"
-                ></i>
-              </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
     </main>
+    <!---------------------------- Footer  ---------------------------->
     <footer class="footer">
       <div class="footer__blockinfo">
         <h2 class="footer__blockinfo__title">ohmyfood</h2>
@@ -223,7 +263,9 @@
             <p class="footer__blockinfo__text">Devenir partenaire</p>
           </div>
           <p class="footer__blockinfo__text">Mentions légales</p>
-          <p class="footer__blockinfo__text">Contact</p>
+          <a href="mailto:nullepart@mozilla.org">
+            <p class="footer__blockinfo__text">Contact</p>
+          </a>
         </div>
       </div>
     </footer>
