integration + correction of animations

--- a/restaurant1.html
+++ b/restaurant1.html
@@ -35,12 +35,15 @@
       />
     </header>
     <!---------------------------- Body  ---------------------------->
-    <main class="container">
-      <img
+ 
+      <div>
+           <img
         class="photo"
         src="./public/css/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
         alt=""
       />
+      </div>
+    <main class="menucontainer">
       <div class="menu">
         <div class="menu__blockrestaurantname">
           <h2 class="menu__blockrestaurantname__title">La palette du goût</h2>
@@ -72,142 +75,215 @@
                 </div>
               </span>
               <span class="menu__carte__blockentrees__entree__survol"
-                ><i class="fas fa-check-circle fa-lg icon"></i
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
               ></span>
             </div>
             <div class="menu__carte__blockentrees__entree">
-              <h3 class="menu__carte__blockentrees__entree__text">
-                Foie gras de canard mi-cuit
-              </h3>
-              <div class="menu__carte__blockentrees__entree__description">
-                <p class="menu__carte__blockentrees__entree__description__text">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Foie gras de canard mi-cuit
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
                   Et ses copeaux de truffe noire
-                </p>
-                <p
-                  class="menu__carte__blockentrees__entree__description__price"
-                >
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
                   35€
-                </p>
-              </div>
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
             </div>
             <div class="menu__carte__blockentrees__entree">
-              <h3 class="menu__carte__blockentrees__entree__text">
-                Oeuf au plat
-              </h3>
-              <div class="menu__carte__blockentrees__entree__description">
-                <p class="menu__carte__blockentrees__entree__description__text">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Oeuf au plat
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
                   Assaisonné à la truffe sur lit de caviar
-                </p>
-                <p
-                  class="menu__carte__blockentrees__entree__description__price"
-                >
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
                   20€
-                </p>
-              </div>
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
             </div>
           </div>
           <div class="menu__carte__blockentrees displayplats">
             <h2 class="menu__carte__blockentrees__title">
-              Plats<span class="menu__carte__blockentrees__title__dot"></span>
+              PLATS<span class="menu__carte__blockentrees__title__dot"></span>
             </h2>
-
             <div class="menu__carte__blockentrees__entree">
-              <h3 class="menu__carte__blockentrees__entree__text">
-                Filet de boeuf aux herbes
-              </h3>
-              <div class="menu__carte__blockentrees__entree__description">
-                <p class="menu__carte__blockentrees__entree__description__text">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Filet de boeuf aux herbes
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
                   Accompagné de sa ribambelle de légumes
-                </p>
-                <p
-                  class="menu__carte__blockentrees__entree__description__price"
-                >
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
                   40€
-                </p>
-              </div>
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
             </div>
             <div class="menu__carte__blockentrees__entree">
-              <h3 class="menu__carte__blockentrees__entree__text">
-                Parmentier de queue de boeuf
-              </h3>
-              <div class="menu__carte__blockentrees__entree__description">
-                <p class="menu__carte__blockentrees__entree__description__text">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Parmentier de queue de boeuf
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
                   À la truffe noire sur sa purée de panais
-                </p>
-                <p
-                  class="menu__carte__blockentrees__entree__description__price"
-                >
-                  35€
-                </p>
-              </div>
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                    35€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
             </div>
             <div class="menu__carte__blockentrees__entree">
-              <h3 class="menu__carte__blockentrees__entree__text">
-                Filet de turbot
-              </h3>
-              <div class="menu__carte__blockentrees__entree__description">
-                <p class="menu__carte__blockentrees__entree__description__text">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Filet de turbot
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
                   Aux agrumes
-                </p>
-                <p
-                  class="menu__carte__blockentrees__entree__description__price"
-                >
-                  44€
-                </p>
-              </div>
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                    44€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
             </div>
           </div>
           <div class="menu__carte__blockdesserts displaydesserts">
             <h2 class="menu__carte__blockentrees__title">
-              Desserts<span
+              DESSERTS<span
                 class="menu__carte__blockentrees__title__dot"
               ></span>
             </h2>
 
             <div class="menu__carte__blockentrees__entree">
-              <h3 class="menu__carte__blockentrees__entree__text">
-                Paris-Brest
-              </h3>
-              <div class="menu__carte__blockentrees__entree__description">
-                <p class="menu__carte__blockentrees__entree__description__text">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Paris-Brest
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
                   Revisité
-                </p>
-                <p
-                  class="menu__carte__blockentrees__entree__description__price"
-                >
-                  18€
-                </p>
-              </div>
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                    18€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
             </div>
             <div class="menu__carte__blockentrees__entree">
-              <h3 class="menu__carte__blockentrees__entree__text">
-                Macaron au chocolat d'exception
-              </h3>
-              <div class="menu__carte__blockentrees__entree__description">
-                <p class="menu__carte__blockentrees__entree__description__text">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Macaron au chocolat d'exception 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
                   Et glace à la vanille de Madagascar
-                </p>
-                <p
-                  class="menu__carte__blockentrees__entree__description__price"
-                >
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
                   22€
-                </p>
-              </div>
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
             </div>
             <div class="menu__carte__blockentrees__entree">
-              <h3 class="menu__carte__blockentrees__entree__text">
-                Mousse au chocolat
-              </h3>
-              <div class="menu__carte__blockentrees__entree__description">
-                <p class="menu__carte__blockentrees__entree__description__text">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Mousse au chocolat 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
                   Au piment d'Espelette et à la truffe noire
-                </p>
-                <p
-                  class="menu__carte__blockentrees__entree__description__price"
-                >
-                  23€
-                </p>
-              </div>
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  23€  
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
             </div>
           </div>
         </div>
@@ -216,9 +292,7 @@
             <h3 class="explore__button__text">Commander</h3>
           </div>
         </div>
-      </div>
-    </main>
-    <!---------------------------- Footer  ---------------------------->
+        <!---------------------------- Footer  ---------------------------->
     <footer class="footer">
       <div class="footer__blockinfo">
         <h2 class="footer__blockinfo__title">ohmyfood</h2>
@@ -242,5 +316,7 @@
         </div>
       </div>
     </footer>
+    </main>
+    
   </body>
 </html>
