--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
           <div class="restaurants__blockinfo">
             <a href="/restaurant1.html">
               <div class="restaurants__blockinfo__restaurant">
+                <div class="restaurants__blockinfo__restaurant__blocknew">
+                  <p class="restaurants__blockinfo__restaurant__blocknew__text">
+                    Nouveau
+                  </p>
+                </div>
                 <img
                   class="restaurants__blockinfo__restaurant__img"
                   src="./public/css/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
@@ -132,6 +137,11 @@
             </a>
             <a href="/restaurant2.html">
               <div class="restaurants__blockinfo__restaurant">
+                <div class="restaurants__blockinfo__restaurant__blocknew">
+                  <p class="restaurants__blockinfo__restaurant__blocknew__text">
+                    Nouveau
+                  </p>
+                </div>
                 <img
                   class="restaurants__blockinfo__restaurant__img"
                   src="./public/css/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
