--- a/restaurant2.html
+++ b/restaurant2.html
@@ -35,8 +35,288 @@
       />
     </header>
     <!---------------------------- Body  ---------------------------->
-    <main class=""></main>
-    <!---------------------------- Footer  ---------------------------->
+ 
+      <div>
+           <img
+        class="photo"
+        src="./public/css/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+        alt=""
+      />
+      </div>
+    <main class="menucontainer">
+      <div class="menu">
+        <div class="menu__blockrestaurantname">
+          <h2 class="menu__blockrestaurantname__title">La note enchantée</h2>
+          <i class="far fa-heart fa-lg menu__blockrestaurantname__logo"></i>
+        </div>
+        <div class="menu__carte">
+          <div class="menu__carte__blockentrees displayentrees">
+            <h2 class="menu__carte__blockentrees__title">
+              ENTRÉES
+              <span class="menu__carte__blockentrees__title__dot"></span>
+            </h2>
+
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Ravioles de foie gras 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Accompagnés de leur crème à la truffe
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                    25€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Caviar osciètre 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Sur blini à la farine de blé noir
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  35€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Homard et espuma de potiron
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Mariné aux zestes d'orange
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  20€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Foie gras de canard cuit entier
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Confiture de figue et pain toasté
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  35€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+          </div>
+          <div class="menu__carte__blockentrees displayplats">
+            <h2 class="menu__carte__blockentrees__title">
+              PLATS<span class="menu__carte__blockentrees__title__dot"></span>
+            </h2>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Noix de coquilles Saint-Jacques
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Sur lit de purée de céleri-rave
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  40€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Langoustine poêlée
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Purée de patate douce
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                    35€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Mijoté de queue de boeuf 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Et riz sauvage aux zestes de citron
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                    44€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+          </div>
+          <div class="menu__carte__blockdesserts displaydesserts">
+            <h2 class="menu__carte__blockentrees__title">
+              DESSERTS<span
+                class="menu__carte__blockentrees__title__dot"
+              ></span>
+            </h2>
+
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Macaron noisette et chocolat
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Glace au caramel brun et sel de Guérande
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  18€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Baba au rhum revisité 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Avec son coulis de citron
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  22€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Tarte au citron meringuée 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Déstructurée
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  23€  
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+          </div>
+        </div>
+        <div class="menu__order">
+          <div class="explore__button">
+            <h3 class="explore__button__text">Commander</h3>
+          </div>
+        </div>
+        <!---------------------------- Footer  ---------------------------->
     <footer class="footer">
       <div class="footer__blockinfo">
         <h2 class="footer__blockinfo__title">ohmyfood</h2>
@@ -54,9 +334,13 @@
             <p class="footer__blockinfo__text">Devenir partenaire</p>
           </div>
           <p class="footer__blockinfo__text">Mentions légales</p>
-          <p class="footer__blockinfo__text">Contact</p>
+          <a href="mailto:nullepart@mozilla.org">
+            <p class="footer__blockinfo__text">Contact</p>
+          </a>
         </div>
       </div>
     </footer>
+    </main>
+    
   </body>
 </html>
