--- a/restaurant4.html
+++ b/restaurant4.html
@@ -35,8 +35,264 @@
       />
     </header>
     <!---------------------------- Body  ---------------------------->
-    <main class=""></main>
-    <!---------------------------- Footer  ---------------------------->
+ 
+      <div>
+           <img
+        class="photo"
+        src="./public/css/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+        alt=""
+      />
+      </div>
+    <main class="menucontainer">
+      <div class="menu">
+        <div class="menu__blockrestaurantname">
+          <h2 class="menu__blockrestaurantname__title">Le délice des sens</h2>
+          <i class="far fa-heart fa-lg menu__blockrestaurantname__logo"></i>
+        </div>
+        <div class="menu__carte">
+          <div class="menu__carte__blockentrees displayentrees">
+            <h2 class="menu__carte__blockentrees__title">
+              ENTRÉES
+              <span class="menu__carte__blockentrees__title__dot"></span>
+            </h2>
+
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Tartare de thon
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Assaisonné au yuzu
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                    25€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Bouchée de homard croustillant 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Et sa farandole de petits légumes
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  35€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Velouté de cèpes 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Aux truffes
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  20€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+          </div>
+          <div class="menu__carte__blockentrees displayplats">
+            <h2 class="menu__carte__blockentrees__title">
+              PLATS<span class="menu__carte__blockentrees__title__dot"></span>
+            </h2>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Poulet rôti aux herbes de Provence 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Et sa crème de truffe
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  40€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Langouste rôtie 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Et ses légumes de saison
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                    35€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Côte de boeuf Angus 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Et sa purée de panais
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                    44€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+          </div>
+          <div class="menu__carte__blockdesserts displaydesserts">
+            <h2 class="menu__carte__blockentrees__title">
+              DESSERTS<span
+                class="menu__carte__blockentrees__title__dot"
+              ></span>
+            </h2>
+
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Farandole de desserts
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Du chef
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  18€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Crème brulée 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  Revisitée
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  22€
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+            <div class="menu__carte__blockentrees__entree">
+              <span class="menu__carte__blockentrees__entree__separator">
+                <h3 class="menu__carte__blockentrees__entree__text">
+                  Tiramisu 
+                </h3>
+                <div class="menu__carte__blockentrees__entree__description">
+                  <p
+                    class="menu__carte__blockentrees__entree__description__text"
+                  >
+                  À la noisette
+                  </p>
+                  <p
+                    class="menu__carte__blockentrees__entree__description__price"
+                  >
+                  23€  
+                  </p>
+                </div>
+              </span>
+              <span class="menu__carte__blockentrees__entree__survol"
+                ><i
+                  class="fas fa-check-circle fa-lg menu__carte__blockentrees__entree__survol__icon"
+                ></i
+              ></span>
+            </div>
+          </div>
+        </div>
+        <div class="menu__order">
+          <div class="explore__button">
+            <h3 class="explore__button__text">Commander</h3>
+          </div>
+        </div>
+        <!---------------------------- Footer  ---------------------------->
     <footer class="footer">
       <div class="footer__blockinfo">
         <h2 class="footer__blockinfo__title">ohmyfood</h2>
@@ -54,9 +310,13 @@
             <p class="footer__blockinfo__text">Devenir partenaire</p>
           </div>
           <p class="footer__blockinfo__text">Mentions légales</p>
-          <p class="footer__blockinfo__text">Contact</p>
+          <a href="mailto:nullepart@mozilla.org">
+            <p class="footer__blockinfo__text">Contact</p>
+          </a>
         </div>
       </div>
     </footer>
+    </main>
+    
   </body>
 </html>
