responsive fix + intégration

--- a/restaurant4.html
+++ b/restaurant4.html
@@ -47,7 +47,10 @@
       <div class="menu">
         <div class="menu__blockrestaurantname">
           <h2 class="menu__blockrestaurantname__title">Le délice des sens</h2>
-          <i class="far fa-heart fa-lg menu__blockrestaurantname__logo"></i>
+          <div class="menu__blockrestaurantname__blocklogo">
+            <i class="far fa-heart fa-lg menu__blockrestaurantname__blocklogo__logo"></i>
+            <i class="fas fa-heart fa-lg menu__blockrestaurantname__blocklogo__logo2"></i>
+          </div>
         </div>
         <div class="menu__carte">
           <div class="menu__carte__blockentrees displayentrees">
