--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="restaurants">
           <h1 class="restaurants__title">Restaurants</h1>
           <div class="restaurants__blockinfo">
-            <a href="../ChrishanDUTTOO_3_06122020/restaurant1.html">
+            <a href="restaurant1.html">
               <div class="restaurants__blockinfo__restaurant">
                 <div class="restaurants__blockinfo__restaurant__blocknew">
                   <p class="restaurants__blockinfo__restaurant__blocknew__text">
@@ -135,7 +135,7 @@
                 </div>
               </div>
             </a>
-            <a href="../ChrishanDUTTOO_3_06122020/restaurant2.html">
+            <a href="restaurant2.html">
               <div class="restaurants__blockinfo__restaurant">
                 <div class="restaurants__blockinfo__restaurant__blocknew">
                   <p class="restaurants__blockinfo__restaurant__blocknew__text">
@@ -177,7 +177,7 @@
                 </div>
               </div>
             </a>
-            <a href="../ChrishanDUTTOO_3_06122020/restaurant3.html">
+            <a href="restaurant3.html">
               <div class="restaurants__blockinfo__restaurant">
                 <img
                   class="restaurants__blockinfo__restaurant__img"
@@ -214,7 +214,7 @@
                 </div>
               </div>
             </a>
-            <a href="../ChrishanDUTTOO_3_06122020/restaurant4.html">
+            <a href="restaurant4.html">
               <div class="restaurants__blockinfo__restaurant">
                 <img
                   class="restaurants__blockinfo__restaurant__img"
